# DBusService

./: .clang-format  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: app_params.hpp  application.hpp
app/src/: app_params.cpp  application.cpp  main.cpp
configs/: App1.json  confManagerApplication1.json  confManagerApplication2.json
include/generic/: generic.hpp  logger.hpp  params.hpp
lib/: libsdbus-c++.so.2  libsdbus-c++.so.2.1.0
service/: CMakeLists.txt
service/include/: app_instance.hpp  params.hpp  service.hpp
service/src/: app_instance.cpp  main.cpp  params.cpp  service.cpp
src/: generic.cpp  logger.cpp  params.cpp
